Moved common code to libs, reduce duplication, improve charging message

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -123,8 +123,8 @@
     <string name="reset_temperature">Reset temperature</string>
     <string name="reset_volt">Reset voltage</string>
     <string name="reset_msg">Reset long-term values to current values?</string>
-    <string name="started">Started:</string>
-    <string name="stopped">Stopped:</string>
+    <string name="started">Started</string>
+    <string name="stopped">Stopped</string>
     <string name="summary_hide_volt">Don\'t log and don\'t show the battery voltage</string>
     <string name="pref_title_hide_volt">Hide voltage</string>
     <string name="szCharged">\nCharged</string>
@@ -158,6 +158,9 @@
         \n\nYou can always change this from the Bamowi settings menu.
     </string>
     <string name="pref_simple_screen_title">Simple layout</string>
+
+    <string name="avg" translatable="false">Average:</string>
+    <string name="szFull" translatable="false">Full</string>
 
 
 </resources>
